syntax = "proto3";
package nas;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "user.proto";
import "types.proto";
import "file.proto";

service FolderService {
  rpc GetFolder (GetFolderRequest) returns (FolderResponse);
  rpc GetSubfolders (GetAllSubfoldersRequest) returns (FolderResponseList);
  rpc DeleteFolder (DeleteFolderRequest) returns (google.protobuf.Empty);
  rpc GetFilesForFolder (GetFilesForFolderRequest) returns (FileListResponse);
  rpc RenameFolder (RenameFolderRequest) returns (FolderResponse);
  rpc SearchFolder (SearchFolderRequest) returns (FolderResponseList);
  rpc DeleteChosenFolders (DeleteAllFolderRequest) returns (google.protobuf.Empty);
  rpc MoveFolder (MoveFolderRequest) returns (FolderResponse);
}

message FolderResponse {
  EntityId id = 1;
  EntityId parent_folder_id = 2;
  string name = 3;
  EntityId owner_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

message FolderResponseList {
  repeated FolderResponse folders = 1;
}

message GetFolderRequest {
  EntityId id = 1;
}

message GetAllSubfoldersRequest {
  EntityId id = 1;
}

message DeleteFolderRequest {
  EntityId id = 1;
}

message DeleteAllFolderRequest {
  repeated EntityId id = 1;
}

message GetFilesForFolderRequest {
  EntityId id = 1;
}

message CreateFolderRequest {
  EntityId parent_folder_id = 1;
  string name = 2;
  EntityId owner_id = 3;
}


message RenameFolderRequest {
  EntityId id = 1;
  string new_name = 2;
}

message SearchFolderRequest {
  string query = 1;
}

message MoveFolderRequest {
  EntityId target_folder = 1;
  EntityId folder_id = 2;
}